<resources>
    <string name="app_name">RentaRide</string>
    <string name="action_settings">Configuración</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="email">Introduzca un email válido.</string>
    <string name="errorcontraseña">Debe introducir más de seis carácteres.</string>
    <string name="errornombre">Debe introducir un nombre.</string>
    <string name="previous">Previous</string>
    <string name="errorlogin">Ha fallado el inicio de sesión! Inténtelo más tarde.</string>
    <string name="errorregistro">No se ha creado la cuenta correctamente! Inténtelo de nuevo.</string>
    <string name="log">Iniciar Sesión</string>
    <string name="con">Contraseña</string>
    <string name="correctologin">Se ha realizado el inicio de sesión correctamente!</string>
    <string name="correctoregistro">Se ha creado la cuenta correctamente!</string>
    <string name="mail">Email</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="nombre">Nombre y Apellidos</string>
    <string name="nomensaje">No hay ningun mensaje!</string>
    <string name="cargando_mensajes">Cargando mensajes...</string>
    <string name="botonreserva">Reserva</string>
    <string name="botonoferta">Oferta</string>
    <string name="botoncalendar">Calendario</string>
    <string name="literalCuenta">Cuenta</string>
    <string name="exitButton">exitButton</string>
    <string name="logout">Cerrar sesión</string>
    <string name="preferenceEmail">prefEmail</string>
    <string name="preferencePass">prefPass</string>
    <string name="preferenceUsername">prefUser</string>
    <string name="calendar">Calendario</string>
    <string name="configuration">Config</string>
    <string name="literalCorreo">Correo electrónico:</string>
    <string name="literalUsername">Nombre del usuario:</string>
    <string name="buscar">Buscar</string>
    <string name="ofertar">Ofertar</string>
    <string name="reservaMapa">Reservar desde Mapa</string>
    <string name="preftelefono">teléfono</string>
    <string name="literalTelefono">Número de teléfono:</string>
    <string name="mantenersesion">sesión</string>
    <string name="tipoCombustible">Tipo combustible</string>
    <string name="Tipo">Tipo</string>
    <string name="imagen">Seleccionar Imagen</string>
    <string name="coche">Coche</string>
    <string name="moto">Moto</string>
    <string name="bici">Bicicleta</string>
    <string name="chat_lucy">Chat con Lucy</string>
    <string name="buenas">Buenas!</string>
    <string name="estadisponible">¿Está el vehiculo disponible?</string>
    <string name="Lucy">Lucy</string>
    <string name="jhon">John</string>
    <string name="introduzca_mensaje">Debe introducir un mensaje!</string>
    <string name="cancelar_oferta">Cancelar Oferta</string>
    <string name="reservar">Reservar</string>
    <string name="eliminar_reserva">Eliminar reserva</string>
    <string name="seguro_eliminar">¿Seguro que quiere eliminar esta reserva?</string>
    <string name="cerrar_sesion">Se ha cerrado la sesión!</string>
    <string name="contraseña_enviada">Se ha enviado un correo para cambiar la contraseña!\n Siga las instrucciones indicadas</string>
    <string name="fragment">fragment</string>
    <string name="reserva_eliminada">Se ha eliminado la reserva correctamente</string>
    <string name="marca">Introduzca una marca</string>
    <string name="modelo">Introduzca un modelo</string>
    <string name="fecha">Introduzca una fecha</string>
    <string name="precio">Introduzca un precio</string>
    <string name="potencia">Introduzca una potencia</string>
    <string name="año">Introduzca un año</string>
    <string name="matricula">Introduzca una matricula</string>
    <string name="cv">\"cv\"</string>
    <string name="ve">ve</string>
    <string name="da">da</string>
    <string name="pr">pr</string>
    <string name="ac">ac</string>
    <string name="eliminar_oferta">Se ha eliminado la oferta correctamente!</string>
    <string name="errorimagen">No se ha podido cargar la imagen correctamente</string>
    <string name="correctaimagen">La imagen se ha cargado correctamente</string>
    <string name="guardar_correctamente">Se ha guardado la imagen correctamente</string>
    <string name="correo_recuperacion">Se ha enviado el correo de recuperación! Revise su buzón.</string>
    <string name="gasolina">Gasolina</string>
    <string name="diesel">Gasoil</string>
    <string name="hibrido">Hibrido</string>
    <string name="electrico">Electrico</string>
    <string name="permission_denied_explanation">Debe habilitar la ubicación</string>
    <string name="settings">Settings</string>
    <string name="permission_rationale">Se precisan de los permisos de ubicacion!</string>
    <string name="needed">Se necesitan permisos de localización!</string>
    <string name="prop">Proporcione los permisos necesarios para que la aplicación pueda funcionar.</string>
    <string name="su">Si</string>
    <string name="No">No</string>
    <string name="perm">Se necesitan los permisos.</string>
    <string name="lon">lon</string>
    <string name="lat">lat</string>
    <string name="tit">tit</string>
    <string name="resveh">¿Seguro que quiere reservar este vehiculo?</string>
    <string name="at">Atención</string>
    <string name="map">map</string>
    <string name="ofveh">Se ha ofrecido el vehiculo correctamente!</string>
    <string name="reservacor">Se ha hecho la reserva correctamente!</string>
    <string name="telef">Introduzca un teléfono válido!</string>
    <string name="conexion">Con la conexión actual no se pudo cargar el mapa, compruebela y vuelva a intentarlo.</string>
    <string name="keyid">keyid</string>
    <string name="config_pago">Configuración de pago</string>
    <string name="inf_tarjeta">Información de la tarjeta</string>
    <string name="preferenceTarjeta">tarjeta</string>
    <string name="otheruid">otherUID</string>
    <string name="ownuid">ownUID</string>
    <string name="notificacionesn">notificaciones</string>
    <string name="notificacionesd">descripcion</string>
    <string name="preferenciared">PreferenciaRed</string>
    <string name="visualizarmapa">Visualización del Mapa</string>
    <string name="redmapa">Red con la que se permite ver el mapa</string>
    <string-array name="combustible_arrays">
        <item>Gasolina</item>
        <item>Gasoil</item>
        <item>Hibrido</item>
        <item>Electrico</item>
    </string-array>
    <string-array name="tipo_arrays">
        <item>Coche</item>
        <item>Motocicleta</item>
        <item>Bicicleta</item>
    </string-array>
</resources>
