<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout="@layout/toolbar">
    <PreferenceCategory
        android:title="@string/literalCuenta"
        android:layout="@layout/preference_text">
        <EditTextPreference
            android:key="@string/preferenceEmail"
            android:selectable="false"
            android:summary="Correo electronico de la cuenta"
            android:title="@string/literalCorreo"/>
        <EditTextPreference
            android:key="@string/preferenceUsername"
            android:selectable="true"
            android:summary="Alias del usuario"
            android:title="@string/literalUsername"/>
    </PreferenceCategory>
</PreferenceScreen>