<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/mensajeerror"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/Black"
        android:layout_margin="20dp"
        android:text="@string/conexion">
    </TextView>

    <fragment
        android:layout_weight="4"
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="500dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkboxes"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/cotxes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coche" />
        <CheckBox
            android:id="@+id/motos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moto" />
        <CheckBox
            android:id="@+id/bicicleta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bici" />

    </LinearLayout>
</LinearLayout>