<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/carddetalle"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        android:backgroundTint="#EAE8E8">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/tipo_arrays"
                android:prompt="@string/Tipo"
                android:id="@+id/spintype"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="Marca"
                    android:id="@+id/reservaMarca"/>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="Modelo"
                    android:id="@+id/reservaModelo"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Fecha"
                    android:focusable="false" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/extra"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:entries="@array/combustible_arrays"
                        android:prompt="@string/tipoCombustible"
                        android:id="@+id/spincombustible"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Adaptado para minusvalidos"
                        android:id="@+id/adaptado"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <com.github.nikartm.button.FitButton
            android:id="@+id/buscar"
            android:padding="15dp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.8"
            android:layout_marginEnd="10dp"
            android:enabled="true"
            android:gravity="center"
            app:fb_backgroundColor="@color/button"
            app:fb_cornerRadius="50dp"
            app:fb_divColor="@color/button"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            app:fb_shape="rectangle"
            app:fb_text="@string/buscar"
            app:fb_textSize="15dp"
            app:fb_textColor="@color/White" />
        <com.github.nikartm.button.FitButton
            android:id="@+id/mapa"
            android:padding="15dp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:enabled="true"
            android:gravity="center"
            app:fb_backgroundColor="@color/colorPrimaryDark"
            app:fb_cornerRadius="50dp"
            app:fb_divColor="@color/colorPrimaryDark"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            app:fb_shape="rectangle"
            app:fb_text="@string/reservaMapa"
            app:fb_textSize="15dp"
            app:fb_textColor="@color/White" />
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reservalist">
    </ListView>
</LinearLayout>