<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".Screens.RegistrarUsuario">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="1.8">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/logo"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/logoImageView"
            android:scaleType="fitXY"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Crear Cuenta"
            android:textSize="29dp"
            android:textColor="@color/White"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="3">
        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            app:mtf_cardCollapsedHeight="4dp"
            app:mtf_hasFocus="false"
            app:mtf_image="@drawable/ic_user"
            app:mtf_openKeyboardOnFocus="true">
            <EditText
                android:id="@+id/reg_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/holo_blue_dark"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="5dp"
            app:mtf_cardCollapsedHeight="4dp"
            app:mtf_hasFocus="false"
            app:mtf_image="@drawable/ic_email_24px"
            app:mtf_openKeyboardOnFocus="true">
            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/holo_blue_dark"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>
        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="5dp"
            app:mtf_cardCollapsedHeight="4dp"
            app:mtf_hasFocus="false"
            app:mtf_image="@drawable/ic_vpn_key_24px"
            app:mtf_openKeyboardOnFocus="true">

            <EditText
                android:id="@+id/telefono"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:hint="@string/literalTelefono"
                android:inputType="number"
                android:maxLength="9"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/holo_blue_dark"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>
        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="5dp"
            app:mtf_cardCollapsedHeight="4dp"
            app:mtf_hasFocus="false"
            app:mtf_image="@drawable/ic_vpn_key_24px"
            app:mtf_openKeyboardOnFocus="true">
            <EditText
                android:id="@+id/reg_contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/con"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/holo_blue_dark"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_weight="1">
        <com.github.nikartm.button.FitButton
            android:id="@+id/btregistrar"
            android:layout_marginStart="10dp"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:enabled="true"
            android:gravity="center"
            app:fb_backgroundColor="@color/button"
            app:fb_cornerRadius="50dp"
            app:fb_divColor="@color/button"
            android:layout_marginEnd="10dp"
            app:fb_shape="rectangle"
            app:fb_text="Crear Cuenta"
            app:fb_textSize="15dp"
            app:fb_textColor="@color/White" />
    </LinearLayout>
</LinearLayout>